--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -31,9 +31,8 @@
             android:textAppearance="?attr/textAppearanceSubtitle1"
             android:textColor="?android:attr/textColorPrimary"
             app:layout_constraintStart_toEndOf="@id/checkbox_completed"
-            app:layout_constraintEnd_toStartOf="@id/text_view_due_date"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="8dp"
             tools:text="Check Hive #5 for Varroa" />
 
         <TextView
@@ -52,19 +51,20 @@
 
         <TextView
             android:id="@+id/text_view_due_date"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:drawablePadding="4dp"
             android:gravity="center_vertical"
             android:textAppearance="?attr/textAppearanceCaption"
-            android:textColor="?attr/colorPrimary"
+            android:textColor="?attr/colorAccent"
             android:visibility="gone"
-            app:drawableStartCompat="@drawable/ic_alarm"
-            app:drawableTint="?attr/colorPrimary"
+            app:drawableStartCompat="@drawable/ic_calendar"
+            app:drawableTint="?attr/colorAccent"
+            app:layout_constraintStart_toStartOf="@id/text_view_task_title"
+            app:layout_constraintTop_toBottomOf="@id/text_view_task_description"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/text_view_task_title"
-            app:layout_constraintBottom_toBottomOf="@id/text_view_task_title"
-            tools:text="15/07 14:00"
+            tools:text="Sun, 27 Jul 2025, 11:10 AM"
             tools:visibility="visible"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
