--- a/app/src/main/res/layout/fragment_colonies_list.xml
+++ b/app/src/main/res/layout/fragment_colonies_list.xml
@@ -1,66 +1,84 @@
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.queenrearing.colonies.ColoniesFragment">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scroll_view_colonies"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <!-- Mother Colonies -->
+            <TextView
+                style="@style/TextAppearance.MaterialComponents.Headline6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mother_colonies"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_mother"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_hive"/>
+
+            <!-- Starter Colonies -->
+            <TextView
+                style="@style/TextAppearance.MaterialComponents.Headline6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/starter_colonies"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_starter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_hive"/>
+
+            <!-- Finisher Colonies -->
+            <TextView
+                style="@style/TextAppearance.MaterialComponents.Headline6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/finisher_colonies"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_finisher"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_hive"/>
+
+            <!-- Nucleus Colonies -->
+            <TextView
+                style="@style/TextAppearance.MaterialComponents.Headline6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/nucleus_colonies"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_nucleus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_hive"/>
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+    <include
+        android:id="@+id/empty_state"
+        layout="@layout/empty_state_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:layout_gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
-        <!-- Mother Colonies -->
-        <TextView
-            style="@style/TextAppearance.MaterialComponents.Headline6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/mother_colonies"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_mother"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/item_hive"/>
-
-        <!-- Starter Colonies -->
-        <TextView
-            style="@style/TextAppearance.MaterialComponents.Headline6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/starter_colonies"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_starter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/item_hive"/>
-
-        <!-- Finisher Colonies -->
-        <TextView
-            style="@style/TextAppearance.MaterialComponents.Headline6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/finisher_colonies"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_finisher"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/item_hive"/>
-
-        <!-- Nucleus Colonies -->
-        <TextView
-            style="@style/TextAppearance.MaterialComponents.Headline6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/nucleus_colonies"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_nucleus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/item_hive"/>
-    </LinearLayout>
-
-</androidx.core.widget.NestedScrollView>
+</FrameLayout>
