--- a/app/src/main/res/layout/fragment_add_edit_grafting_batch.xml
+++ b/app/src/main/res/layout/fragment_add_edit_grafting_batch.xml
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clickable="true"
-                android:focusable="true" />
+                android:focusable="false" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,6 +76,37 @@
                 android:inputType="number" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/use_starter_check_box"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/use_starter_colony"
+            android:checked="true" />
+
+        <TextView
+            style="@style/TextAppearance.MaterialComponents.Headline6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/custom_notifications" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/custom_tasks_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            tools:listitem="@layout/item_custom_task" />
+
+        <Button
+            android:id="@+id/add_custom_task_button"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:text="@string/add_task"
+            app:icon="@drawable/ic_add" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/notes_layout"
