--- a/app/src/main/res/layout/item_hive.xml
+++ b/app/src/main/res/layout/item_hive.xml
@@ -77,18 +77,6 @@
             app:layout_constraintEnd_toStartOf="@id/image_button_edit_hive"
             tools:text="Breed: Carniolan" />
 
-        <TextView
-            android:id="@+id/text_view_last_inspection_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceBody2"
-            android:textColor="?android:attr/textColorSecondary"
-            android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@id/text_view_breed"
-            app:layout_constraintStart_toEndOf="@id/checkbox_hive_select"
-            app:layout_constraintEnd_toStartOf="@id/image_button_edit_hive"
-            tools:text="Last Inspection: 15/06/2025" />
-
         <ImageButton
             android:id="@+id/image_button_edit_hive"
             android:layout_width="48dp"
@@ -97,6 +85,7 @@
             android:src="@drawable/ic_edit"
             app:tint="?attr/colorAccent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="@string/action_edit" />
 
